{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 39,
  "lineage": "90a0a979-96b9-2d90-f80e-72cc1d6d66b5",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "webvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Porche",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/networkInterfaces/sap-dev-nic-Porche",
            "internal_domain_name_suffix": "r12f3x4f01cu5disyhhvyre51a.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/publicIPAddresses/sap-dev-publicip-Porche",
                "subnet_id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-websubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "name": "sap-dev-nic-Porche",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "sap-dev-rg-prod"
          },
          "dependencies": [
            "azurerm_public_ip.web_linuixvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "audi",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/networkInterfaces/sap-dev-nic-audi",
            "internal_domain_name_suffix": "r12f3x4f01cu5disyhhvyre51a.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/publicIPAddresses/sap-dev-publicip-audi",
                "subnet_id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-websubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "name": "sap-dev-nic-audi",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "sap-dev-rg-prod"
          },
          "dependencies": [
            "azurerm_public_ip.web_linuixvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/networkSecurityGroups/sap-dev-nsg",
            "location": "eastus2",
            "name": "sap-dev-nsg",
            "resource_group_name": "sap-dev-rg-prod",
            "security_rule": [],
            "tags": {
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_inbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/networkSecurityGroups/sap-dev-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "sap-dev-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-prod",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/networkSecurityGroups/sap-dev-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "sap-dev-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-prod",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/networkSecurityGroups/sap-dev-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "sap-dev-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-prod",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_linuixvm_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Porche",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/publicIPAddresses/sap-dev-publicip-Porche",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.123.45.208",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "sap-dev-publicip-Porche",
            "resource_group_name": "sap-dev-rg-prod",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owners": "sap"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "audi",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/publicIPAddresses/sap-dev-publicip-audi",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.210.4.73",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "sap-dev-publicip-audi",
            "resource_group_name": "sap-dev-rg-prod",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owners": "sap"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-websubnet",
            "name": "sap-dev-websubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sap-dev-rg-prod",
            "virtual_network_name": "sap-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-websubnet",
            "network_security_group_id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/networkSecurityGroups/sap-dev-nsg",
            "subnet_id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "df5ef88e-d6c5-4fc5-8d12-c1cf5c449fd8",
            "id": "/subscriptions/548ab22c-ff88-42af-9353-605b5d3a8abe/resourceGroups/sap-dev-rg-prod/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default",
            "location": "eastus2",
            "name": "sap-dev-vnet-default",
            "resource_group_name": "sap-dev-rg-prod",
            "tags": {
              "environment": "dev",
              "owners": "sap"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}